APIs/googleapis.com/displayvideo/v3/javascript-client/docs/AssignedTargetingOption.md
# DisplayVideo360Api.AssignedTargetingOption

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**ageRangeDetails** | [**AgeRangeAssignedTargetingOptionDetails**](AgeRangeAssignedTargetingOptionDetails.md) |  | [optional] 
**appCategoryDetails** | [**AppCategoryAssignedTargetingOptionDetails**](AppCategoryAssignedTargetingOptionDetails.md) |  | [optional] 
**appDetails** | [**AppAssignedTargetingOptionDetails**](AppAssignedTargetingOptionDetails.md) |  | [optional] 
**assignedTargetingOptionId** | **String** | Output only. The unique ID of the assigned targeting option. The ID is only unique within a given resource and targeting type. It may be reused in other contexts. | [optional] [readonly] 
**assignedTargetingOptionIdAlias** | **String** | Output only. An alias for the assigned_targeting_option_id. This value can be used in place of &#x60;assignedTargetingOptionId&#x60; when retrieving or deleting existing targeting. This field will only be supported for all assigned targeting options of the following targeting types: * &#x60;TARGETING_TYPE_AGE_RANGE&#x60; * &#x60;TARGETING_TYPE_DEVICE_TYPE&#x60; * &#x60;TARGETING_TYPE_DIGITAL_CONTENT_LABEL_EXCLUSION&#x60; * &#x60;TARGETING_TYPE_ENVIRONMENT&#x60; * &#x60;TARGETING_TYPE_EXCHANGE&#x60; * &#x60;TARGETING_TYPE_GENDER&#x60; * &#x60;TARGETING_TYPE_HOUSEHOLD_INCOME&#x60; * &#x60;TARGETING_TYPE_NATIVE_CONTENT_POSITION&#x60; * &#x60;TARGETING_TYPE_OMID&#x60; * &#x60;TARGETING_TYPE_PARENTAL_STATUS&#x60; * &#x60;TARGETING_TYPE_SENSITIVE_CATEGORY_EXCLUSION&#x60; * &#x60;TARGETING_TYPE_VIDEO_PLAYER_SIZE&#x60; * &#x60;TARGETING_TYPE_VIEWABILITY&#x60; This field is also supported for line item assigned targeting options of the following targeting types: * &#x60;TARGETING_TYPE_CONTENT_INSTREAM_POSITION&#x60; * &#x60;TARGETING_TYPE_CONTENT_OUTSTREAM_POSITION&#x60; | [optional] [readonly] 
**audienceGroupDetails** | [**AudienceGroupAssignedTargetingOptionDetails**](AudienceGroupAssignedTargetingOptionDetails.md) |  | [optional] 
**audioContentTypeDetails** | [**AudioContentTypeAssignedTargetingOptionDetails**](AudioContentTypeAssignedTargetingOptionDetails.md) |  | [optional] 
**authorizedSellerStatusDetails** | [**AuthorizedSellerStatusAssignedTargetingOptionDetails**](AuthorizedSellerStatusAssignedTargetingOptionDetails.md) |  | [optional] 
**browserDetails** | [**BrowserAssignedTargetingOptionDetails**](BrowserAssignedTargetingOptionDetails.md) |  | [optional] 
**businessChainDetails** | [**BusinessChainAssignedTargetingOptionDetails**](BusinessChainAssignedTargetingOptionDetails.md) |  | [optional] 
**carrierAndIspDetails** | [**CarrierAndIspAssignedTargetingOptionDetails**](CarrierAndIspAssignedTargetingOptionDetails.md) |  | [optional] 
**categoryDetails** | [**CategoryAssignedTargetingOptionDetails**](CategoryAssignedTargetingOptionDetails.md) |  | [optional] 
**channelDetails** | [**ChannelAssignedTargetingOptionDetails**](ChannelAssignedTargetingOptionDetails.md) |  | [optional] 
**contentDurationDetails** | [**ContentDurationAssignedTargetingOptionDetails**](ContentDurationAssignedTargetingOptionDetails.md) |  | [optional] 
**contentGenreDetails** | [**ContentGenreAssignedTargetingOptionDetails**](ContentGenreAssignedTargetingOptionDetails.md) |  | [optional] 
**contentInstreamPositionDetails** | [**ContentInstreamPositionAssignedTargetingOptionDetails**](ContentInstreamPositionAssignedTargetingOptionDetails.md) |  | [optional] 
**contentOutstreamPositionDetails** | [**ContentOutstreamPositionAssignedTargetingOptionDetails**](ContentOutstreamPositionAssignedTargetingOptionDetails.md) |  | [optional] 
**contentStreamTypeDetails** | [**ContentStreamTypeAssignedTargetingOptionDetails**](ContentStreamTypeAssignedTargetingOptionDetails.md) |  | [optional] 
**dayAndTimeDetails** | [**DayAndTimeAssignedTargetingOptionDetails**](DayAndTimeAssignedTargetingOptionDetails.md) |  | [optional] 
**deviceMakeModelDetails** | [**DeviceMakeModelAssignedTargetingOptionDetails**](DeviceMakeModelAssignedTargetingOptionDetails.md) |  | [optional] 
**deviceTypeDetails** | [**DeviceTypeAssignedTargetingOptionDetails**](DeviceTypeAssignedTargetingOptionDetails.md) |  | [optional] 
**digitalContentLabelExclusionDetails** | [**DigitalContentLabelAssignedTargetingOptionDetails**](DigitalContentLabelAssignedTargetingOptionDetails.md) |  | [optional] 
**environmentDetails** | [**EnvironmentAssignedTargetingOptionDetails**](EnvironmentAssignedTargetingOptionDetails.md) |  | [optional] 
**exchangeDetails** | [**ExchangeAssignedTargetingOptionDetails**](ExchangeAssignedTargetingOptionDetails.md) |  | [optional] 
**genderDetails** | [**GenderAssignedTargetingOptionDetails**](GenderAssignedTargetingOptionDetails.md) |  | [optional] 
**geoRegionDetails** | [**GeoRegionAssignedTargetingOptionDetails**](GeoRegionAssignedTargetingOptionDetails.md) |  | [optional] 
**householdIncomeDetails** | [**HouseholdIncomeAssignedTargetingOptionDetails**](HouseholdIncomeAssignedTargetingOptionDetails.md) |  | [optional] 
**inheritance** | **String** | Output only. The inheritance status of the assigned targeting option. | [optional] [readonly] 
**inventorySourceDetails** | [**InventorySourceAssignedTargetingOptionDetails**](InventorySourceAssignedTargetingOptionDetails.md) |  | [optional] 
**inventorySourceGroupDetails** | [**InventorySourceGroupAssignedTargetingOptionDetails**](InventorySourceGroupAssignedTargetingOptionDetails.md) |  | [optional] 
**keywordDetails** | [**KeywordAssignedTargetingOptionDetails**](KeywordAssignedTargetingOptionDetails.md) |  | [optional] 
**languageDetails** | [**LanguageAssignedTargetingOptionDetails**](LanguageAssignedTargetingOptionDetails.md) |  | [optional] 
**name** | **String** | Output only. The resource name for this assigned targeting option. | [optional] [readonly] 
**nativeContentPositionDetails** | [**NativeContentPositionAssignedTargetingOptionDetails**](NativeContentPositionAssignedTargetingOptionDetails.md) |  | [optional] 
**negativeKeywordListDetails** | [**NegativeKeywordListAssignedTargetingOptionDetails**](NegativeKeywordListAssignedTargetingOptionDetails.md) |  | [optional] 
**omidDetails** | [**OmidAssignedTargetingOptionDetails**](OmidAssignedTargetingOptionDetails.md) |  | [optional] 
**onScreenPositionDetails** | [**OnScreenPositionAssignedTargetingOptionDetails**](OnScreenPositionAssignedTargetingOptionDetails.md) |  | [optional] 
**operatingSystemDetails** | [**OperatingSystemAssignedTargetingOptionDetails**](OperatingSystemAssignedTargetingOptionDetails.md) |  | [optional] 
**parentalStatusDetails** | [**ParentalStatusAssignedTargetingOptionDetails**](ParentalStatusAssignedTargetingOptionDetails.md) |  | [optional] 
**poiDetails** | [**PoiAssignedTargetingOptionDetails**](PoiAssignedTargetingOptionDetails.md) |  | [optional] 
**proximityLocationListDetails** | [**ProximityLocationListAssignedTargetingOptionDetails**](ProximityLocationListAssignedTargetingOptionDetails.md) |  | [optional] 
**regionalLocationListDetails** | [**RegionalLocationListAssignedTargetingOptionDetails**](RegionalLocationListAssignedTargetingOptionDetails.md) |  | [optional] 
**sensitiveCategoryExclusionDetails** | [**SensitiveCategoryAssignedTargetingOptionDetails**](SensitiveCategoryAssignedTargetingOptionDetails.md) |  | [optional] 
**sessionPositionDetails** | [**SessionPositionAssignedTargetingOptionDetails**](SessionPositionAssignedTargetingOptionDetails.md) |  | [optional] 
**subExchangeDetails** | [**SubExchangeAssignedTargetingOptionDetails**](SubExchangeAssignedTargetingOptionDetails.md) |  | [optional] 
**targetingType** | **String** | Output only. Identifies the type of this assigned targeting option. | [optional] [readonly] 
**thirdPartyVerifierDetails** | [**ThirdPartyVerifierAssignedTargetingOptionDetails**](ThirdPartyVerifierAssignedTargetingOptionDetails.md) |  | [optional] 
**urlDetails** | [**UrlAssignedTargetingOptionDetails**](UrlAssignedTargetingOptionDetails.md) |  | [optional] 
**userRewardedContentDetails** | [**UserRewardedContentAssignedTargetingOptionDetails**](UserRewardedContentAssignedTargetingOptionDetails.md) |  | [optional] 
**videoPlayerSizeDetails** | [**VideoPlayerSizeAssignedTargetingOptionDetails**](VideoPlayerSizeAssignedTargetingOptionDetails.md) |  | [optional] 
**viewabilityDetails** | [**ViewabilityAssignedTargetingOptionDetails**](ViewabilityAssignedTargetingOptionDetails.md) |  | [optional] 
**youtubeChannelDetails** | [**YoutubeChannelAssignedTargetingOptionDetails**](YoutubeChannelAssignedTargetingOptionDetails.md) |  | [optional] 
**youtubeVideoDetails** | [**YoutubeVideoAssignedTargetingOptionDetails**](YoutubeVideoAssignedTargetingOptionDetails.md) |  | [optional] 



## Enum: InheritanceEnum


* `INHERITANCE_UNSPECIFIED` (value: `"INHERITANCE_UNSPECIFIED"`)

* `NOT_INHERITED` (value: `"NOT_INHERITED"`)

* `INHERITED_FROM_PARTNER` (value: `"INHERITED_FROM_PARTNER"`)

* `INHERITED_FROM_ADVERTISER` (value: `"INHERITED_FROM_ADVERTISER"`)





## Enum: TargetingTypeEnum


* `UNSPECIFIED` (value: `"TARGETING_TYPE_UNSPECIFIED"`)

* `CHANNEL` (value: `"TARGETING_TYPE_CHANNEL"`)

* `APP_CATEGORY` (value: `"TARGETING_TYPE_APP_CATEGORY"`)

* `APP` (value: `"TARGETING_TYPE_APP"`)

* `URL` (value: `"TARGETING_TYPE_URL"`)

* `DAY_AND_TIME` (value: `"TARGETING_TYPE_DAY_AND_TIME"`)

* `AGE_RANGE` (value: `"TARGETING_TYPE_AGE_RANGE"`)

* `REGIONAL_LOCATION_LIST` (value: `"TARGETING_TYPE_REGIONAL_LOCATION_LIST"`)

* `PROXIMITY_LOCATION_LIST` (value: `"TARGETING_TYPE_PROXIMITY_LOCATION_LIST"`)

* `GENDER` (value: `"TARGETING_TYPE_GENDER"`)

* `VIDEO_PLAYER_SIZE` (value: `"TARGETING_TYPE_VIDEO_PLAYER_SIZE"`)

* `USER_REWARDED_CONTENT` (value: `"TARGETING_TYPE_USER_REWARDED_CONTENT"`)

* `PARENTAL_STATUS` (value: `"TARGETING_TYPE_PARENTAL_STATUS"`)

* `CONTENT_INSTREAM_POSITION` (value: `"TARGETING_TYPE_CONTENT_INSTREAM_POSITION"`)

* `CONTENT_OUTSTREAM_POSITION` (value: `"TARGETING_TYPE_CONTENT_OUTSTREAM_POSITION"`)

* `DEVICE_TYPE` (value: `"TARGETING_TYPE_DEVICE_TYPE"`)

* `AUDIENCE_GROUP` (value: `"TARGETING_TYPE_AUDIENCE_GROUP"`)

* `BROWSER` (value: `"TARGETING_TYPE_BROWSER"`)

* `HOUSEHOLD_INCOME` (value: `"TARGETING_TYPE_HOUSEHOLD_INCOME"`)

* `ON_SCREEN_POSITION` (value: `"TARGETING_TYPE_ON_SCREEN_POSITION"`)

* `THIRD_PARTY_VERIFIER` (value: `"TARGETING_TYPE_THIRD_PARTY_VERIFIER"`)

* `DIGITAL_CONTENT_LABEL_EXCLUSION` (value: `"TARGETING_TYPE_DIGITAL_CONTENT_LABEL_EXCLUSION"`)

* `SENSITIVE_CATEGORY_EXCLUSION` (value: `"TARGETING_TYPE_SENSITIVE_CATEGORY_EXCLUSION"`)

* `ENVIRONMENT` (value: `"TARGETING_TYPE_ENVIRONMENT"`)

* `CARRIER_AND_ISP` (value: `"TARGETING_TYPE_CARRIER_AND_ISP"`)

* `OPERATING_SYSTEM` (value: `"TARGETING_TYPE_OPERATING_SYSTEM"`)

* `DEVICE_MAKE_MODEL` (value: `"TARGETING_TYPE_DEVICE_MAKE_MODEL"`)

* `KEYWORD` (value: `"TARGETING_TYPE_KEYWORD"`)

* `NEGATIVE_KEYWORD_LIST` (value: `"TARGETING_TYPE_NEGATIVE_KEYWORD_LIST"`)

* `VIEWABILITY` (value: `"TARGETING_TYPE_VIEWABILITY"`)

* `CATEGORY` (value: `"TARGETING_TYPE_CATEGORY"`)

* `INVENTORY_SOURCE` (value: `"TARGETING_TYPE_INVENTORY_SOURCE"`)

* `LANGUAGE` (value: `"TARGETING_TYPE_LANGUAGE"`)

* `AUTHORIZED_SELLER_STATUS` (value: `"TARGETING_TYPE_AUTHORIZED_SELLER_STATUS"`)

* `GEO_REGION` (value: `"TARGETING_TYPE_GEO_REGION"`)

* `INVENTORY_SOURCE_GROUP` (value: `"TARGETING_TYPE_INVENTORY_SOURCE_GROUP"`)

* `EXCHANGE` (value: `"TARGETING_TYPE_EXCHANGE"`)

* `SUB_EXCHANGE` (value: `"TARGETING_TYPE_SUB_EXCHANGE"`)

* `POI` (value: `"TARGETING_TYPE_POI"`)

* `BUSINESS_CHAIN` (value: `"TARGETING_TYPE_BUSINESS_CHAIN"`)

* `CONTENT_DURATION` (value: `"TARGETING_TYPE_CONTENT_DURATION"`)

* `CONTENT_STREAM_TYPE` (value: `"TARGETING_TYPE_CONTENT_STREAM_TYPE"`)

* `NATIVE_CONTENT_POSITION` (value: `"TARGETING_TYPE_NATIVE_CONTENT_POSITION"`)

* `OMID` (value: `"TARGETING_TYPE_OMID"`)

* `AUDIO_CONTENT_TYPE` (value: `"TARGETING_TYPE_AUDIO_CONTENT_TYPE"`)

* `CONTENT_GENRE` (value: `"TARGETING_TYPE_CONTENT_GENRE"`)

* `YOUTUBE_VIDEO` (value: `"TARGETING_TYPE_YOUTUBE_VIDEO"`)

* `YOUTUBE_CHANNEL` (value: `"TARGETING_TYPE_YOUTUBE_CHANNEL"`)

* `SESSION_POSITION` (value: `"TARGETING_TYPE_SESSION_POSITION"`)




